[gd_scene load_steps=6 format=3 uid="uid://cy6ivuifibf5l"]

[ext_resource type="Script" path="res://src/platforms/SwapPlatforms.gd" id="1_car3a"]

[sub_resource type="BoxMesh" id="BoxMesh_21ni8"]
size = Vector3(2, 0.2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ulo4"]
albedo_color = Color(0.965932, 0.417102, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_7rlfv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_k08ei"]
albedo_color = Color(0, 0.14902, 1, 1)

[node name="PlatformsTimeChangers" type="Node3D"]
script = ExtResource("1_car3a")

[node name="platform1" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.05, 0, 0)
collision_layer = 2
collision_mask = 255

[node name="MeshInstance3D" type="MeshInstance3D" parent="platform1"]
mesh = SubResource("BoxMesh_21ni8")
surface_material_override/0 = SubResource("StandardMaterial3D_8ulo4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="platform1"]
transform = Transform3D(2, 0, 0, 0, 0.2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_7rlfv")

[node name="platform2" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.05, 0, 0)
visible = false
collision_layer = 3
collision_mask = 255

[node name="MeshInstance3D" type="MeshInstance3D" parent="platform2"]
material_override = SubResource("StandardMaterial3D_k08ei")
mesh = SubResource("BoxMesh_21ni8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="platform2"]
transform = Transform3D(2, 0, 0, 0, 0.2, 0, 0, 0, 2, 0, 0, 0)
shape = SubResource("BoxShape3D_7rlfv")

[node name="timer_to_swap" type="Timer" parent="."]
wait_time = 6.0

[connection signal="timeout" from="timer_to_swap" to="." method="_on_timer_to_swap_timeout"]
